# tun2proxy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  LICENSE  README.md  build-aarch64-apple-ios-debug.sh  build-aarch64-apple-ios.sh  build-android.sh  build-apple-debug.sh  build-apple.sh  build.rs  cbindgen.toml
.cargo/: config.toml
.github/workflows/: auto-merge.yaml  close-stale-issues.yml  docker-publish.yml  format-build.yml  format.yml  install-cross.sh  publish-crate.yml  publish-docker.yml  publish-exe.yml  publish-win7.yml  rust.yml  tests.yml
apple/: readme.md
apple/tun2proxy/: Tun2proxyWrapper.h  Tun2proxyWrapper.m  tun2proxy.h
apple/tun2proxy.xcodeproj/: project.pbxproj
docker/: entrypoint.sh
scripts/: dante.conf  iperf3.sh  linux.sh  rperf.sh
src/: android.rs  api.rs  apple.rs  args.rs  desktop_api.rs  directions.rs  dns.rs  dump_logger.rs  error.rs  ffi.rs  general_api.rs  http.rs  ios.rs  lib.rs  main.rs  mobile.rs  mobile_api.rs  no_proxy.rs  proxy_handler.rs  session_info.rs  setup.rs  socket_transfer.rs  socks.rs  socks5.rs  stream.rs  traffic_status.rs  tun2proxy.rs  tuntapinterface.rs  tuntapinterfacedesc.rs  udpgw.rs  util.rs  virtdevice.rs  virtdns.rs  virtual_dns.rs  win_svc.rs  wintuninterface.rs
tests/: Dockerfile  password.secret  proxy.rs  requirements.txt  run-tests.sh  tests.py
tests/iperf/: dante.conf  test.sh
tests/manual-tests/: test-ds-dns-lookup.py
tests/manual-tests/half-open-close-client/: client.py  server.py
tests/manual-tests/half-open-close-server/: client.py  server.py
